--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
 </head>
 <body>
   <div class="wrapper">
+    <header>
+      <h1>Welcome to Riyadh</h1>
+    <h2>Where A Traditional Past Meets A Modern Future.
+    </h2></header>
 
     <!-- HEADER -->
     <!-- SUB HEAD -->
 
     <div id="content">
+<img src="transit.jpg" alt="Modern Transit">
+<header>
+  <h3>Travel</h3>
+</header>
 
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
         
