--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h3>Travel</h3>
 </header>
 <p>
-Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world. The country’s political, financial and administrative capital is also a city with a fascinating subtext.  
+Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world. The country’s political, financial and administrative capital is also a city with a fascinating subtext.
 </p>
 
 <header>
@@ -32,6 +32,10 @@ Once a mudbrick waystation along desert trading routes, Riyadh is now one of the
 </p>
 <img src="garden.jpg" alt="Riyadh Garden">
 
+<p>
+  The city is divided into 15 municipal districts, managed by Riyadh Municipality headed by the mayor of Riyadh, and the Riyadh Development Authority, chaired by the governor of Riyadh Province, Khalid bin Bandar Al Saud. The current mayor of Riyadh is Abdullah bin Abdul Rahman Al Mogbel, appointed in 2012. Riyadh has the largest all female university in the world, the Princess Nora bint Abdulrahman University. It has been designated as a Beta World City.
+</p>
+<img src="camels-in-truck.jpg" alt="The roads of Riyadh">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
 
     </div>
