automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@ Once a mudbrick waystation along desert trading routes, Riyadh is now one of the
   <h3>Sources</h3>
 </header>
 
+<link rel="Lonely Planet" href="http://www.lonelyplanet.com/saudi-arabia/riyadh" target="_blank">
+<link rel="Wikipedia" href="http://en.wikipedia.org/wiki/Riyadh" target="_blank">
+
 
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
 
