--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ Once a mudbrick waystation along desert trading routes, Riyadh is now one of the
   <h3>Sources</h3>
 </header>
 
-<link rel="Lonely Planet" href="http://www.lonelyplanet.com/saudi-arabia/riyadh" target="_blank">
-<link rel="Wikipedia" href="http://en.wikipedia.org/wiki/Riyadh" target="_blank">
+<a href="http://www.lonelyplanet.com/saudi-arabia/riyadh" target="_blank">Lonely Planet</a>
+<a href="http://en.wikipedia.org/wiki/Riyadh" target="_blank">Wikipedia</a> 
 
 
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
