--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- SUB HEAD -->
 
     <div id="content">
-<img src="transit.jpg" alt="Modern Transit">
+<img src=".../images/transportation/transit.jpg" alt="Modern Transit">
 <header>
   <h3>Travel</h3>
 </header>
